examples/test/testpolicy15316.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15316
  namespace: namespace365
spec:
  podSelector:
    matchLabels:
      key15: value45
      key33: value25
      key27: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value10
          key13: value19
      podSelector:
        matchLabels:
          key46: value12
          key8: value27
